objects/Line_of_Business__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that Line of Business is either active or inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commodities__c</fullName>
        <label>Commodities</label>
        <picklist>
            <picklistValues>
                <fullName>TSL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assorted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiffy Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique reference for the line of Business.</description>
        <externalId>true</externalId>
        <label>Line of Business Reference</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Routing_Network__c</fullName>
        <description>Type of routing network that the consignment will use. Certain goods must be handled by a specialist network of depots (e.g. Fashion).</description>
        <label>Routing Network</label>
        <picklist>
            <picklistValues>
                <fullName>EWW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Line of Business</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Line_of_Business_Reference__c</columns>
        <columns>Active__c</columns>
        <columns>Routing_Network__c</columns>
        <columns>Commodities__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lines of Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>